# aoi-csv-handler

./: .gitignore  README.md  clion.Dockerfile
src/: AoICalculator.cpp  AoICalculator.h  CMakeLists.txt  Database.cpp  Database.h  MessageReceived.cpp  MessageReceived.h  MessageSent.cpp  MessageSent.h  Vehicle.cpp  Vehicle.h  csv_parser.cpp  csv_parser.h  main.cpp  position.cpp  position.h
